--- a/gym/EstilosGym.css
+++ b/gym/EstilosGym.css
@@ -5,6 +5,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;800&display=swap");
 @import url("./styles/services.css");
 @import url("./styles/menu-bottom.css");
+/* xample git lalaal */
 * {
   margin: 0;
   padding: 0;
